--- a/app/src/main/res/layout/fc_storehouse.xml
+++ b/app/src/main/res/layout/fc_storehouse.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,23 +14,193 @@
             layout="@layout/public_title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-        <com.guoyie.www.delivery.easy.widget.SwipeRefreshLayoutt
-            android:id="@+id/swipeRefresh"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <RelativeLayout
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:background="@color/app_color_blue">
+            <cn.bingoogolapple.bgabanner.BGABanner
+                android:id="@+id/banner"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                style="@style/BannerDefaultStyle"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="25dp"
+                app:banner_contentBottomMargin="20dp"
+                app:banner_indicatorGravity="bottom|center_horizontal"
+                app:banner_isNeedShowIndicatorOnOnlyOnePage="true"
+                app:banner_isNumberIndicator="false"
+                app:banner_pointAutoPlayAble="true"
+                app:banner_pointContainerBackground="@android:color/transparent"
+                app:banner_pointDrawable="@drawable/bga_banner_selector_point_hollow"
+                app:banner_transitionEffect="defaultEffect"/>
+        </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/rl_store_manager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#fff"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginBottom="9dp"
+            android:layout_marginTop="14dp">
+            <ImageView
+                android:id="@+id/iv_store_manager"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/store_manager"
+                android:layout_marginLeft="14dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="储罐管理"
+                android:layout_toRightOf="@id/iv_store_manager"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="11dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/right"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="14dp"/>
+        </RelativeLayout>
 
-                <com.guoyie.www.delivery.easy.widget.recyclerview.NRecyclerView
-                    android:id="@+id/nrecycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rl_store_capacity_manager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#fff"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginBottom="9dp">
+            <ImageView
+                android:id="@+id/iv_store_capacity_manager"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/store_capacity_manager"
+                android:layout_marginLeft="14dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="库容管理"
+                android:layout_toRightOf="@id/iv_store_capacity_manager"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="11dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/right"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="14dp"/>
+        </RelativeLayout>
 
-        </com.guoyie.www.delivery.easy.widget.SwipeRefreshLayoutt>
+        <RelativeLayout
+            android:id="@+id/rl_store_pandian_manager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#fff"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginBottom="9dp">
+            <ImageView
+                android:id="@+id/iv_store_pandian_manager"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/store_pandian_manager"
+                android:layout_marginLeft="14dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="储罐盘点管理"
+                android:layout_toRightOf="@id/iv_store_pandian_manager"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="11dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/right"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="14dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_client_store_manager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#fff"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginBottom="9dp">
+            <ImageView
+                android:id="@+id/iv_client_store_manager"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/client_store_manager"
+                android:layout_marginLeft="14dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="客户库存管理"
+                android:layout_toRightOf="@id/iv_client_store_manager"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="11dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/right"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="14dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_detail_table"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:background="#fff"
+            android:layout_marginLeft="14dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginBottom="9dp">
+            <ImageView
+                android:id="@+id/iv_detail_table"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@mipmap/detail_table"
+                android:layout_marginLeft="14dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="库存变更明细表"
+                android:layout_toRightOf="@id/iv_detail_table"
+                android:textColor="#333333"
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="11dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/right"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="14dp"/>
+        </RelativeLayout>
 
 
 
