--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,4 +57,6 @@
     <color name="blue_bg">#497AF8</color>
     <color name="blue">#0066FF</color>
     <color name="gray">#C0C0C0</color>
+    <color name="filter_normal">#111111</color>
+    <color name="filter_selected">#497AF8</color>
 </resources>
