--- a/app/src/main/res/layout/activity_interdetail.xml
+++ b/app/src/main/res/layout/activity_interdetail.xml
@@ -12,7 +12,7 @@
             android:id="@+id/title_bar"
             layout="@layout/public_title_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
    <ScrollView
        android:background="@color/white"
@@ -253,7 +253,7 @@
 
                    <ImageView
                        android:layout_width="wrap_content"
-                       android:src="@mipmap/search"
+                       android:src="@mipmap/right"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
 
