--- a/app/src/main/res/layout/public_title_bar.xml
+++ b/app/src/main/res/layout/public_title_bar.xml
@@ -15,10 +15,11 @@
             android:id="@+id/left_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_centerVertical="true"
             android:background="@color/transparent"
             android:padding="12dp"
-            android:src="@drawable/back"
+            android:src="@mipmap/left_arrow"
             android:visibility="visible" />
 
         <TextView
