--- a/app/src/main/res/layout/wind_base_dialog_xml.xml
+++ b/app/src/main/res/layout/wind_base_dialog_xml.xml
@@ -6,6 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/dialog_shadow"
         android:orientation="vertical">
 
         <TextView
@@ -20,7 +21,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0.5dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:background="@color/line_color" />
@@ -67,6 +68,7 @@
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
+                    android:background="@drawable/btn_left_bottom_selector"
                     android:text="取消"
                     android:textColor="#529BeA" />
 
@@ -80,6 +82,7 @@
                     android:layout_width="0dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
+                    android:background="@drawable/btn_right_bottom_selector"
                     android:text="确定"
                     android:textColor="#529BeA" />
             </LinearLayout>
