--- a/app/src/main/res/layout/commit_dialog.xml
+++ b/app/src/main/res/layout/commit_dialog.xml
@@ -4,85 +4,93 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/alertdialog_bg">
+    android:background="@drawable/dialog_shadow">
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="确认您的提交信息"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:textColor="#3C3F41"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"/>
+        android:gravity="center"/>
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="企业名称"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"/>
+        android:gravity="center"/>
     <TextView
         android:id="@+id/tv_companyname"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginLeft="20dp"
         android:textColor="#3C3F41"
-        android:textSize="20sp"
-        android:text="上海国烨跨境电子商务有限公司"/>
+        android:textSize="14sp"
+        android:text="上海国烨跨境电子商务有限公司"
+        android:gravity="center"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#999999"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginRight="20dp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_height="0dp"
+        android:layout_weight="1.5">
 
         <RelativeLayout
             android:id="@+id/ll_1"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            android:layout_centerVertical="true">
             <TextView
+                android:layout_marginTop="20dp"
                 android:id="@+id/tv_contacts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="联系人"
-                android:textSize="18sp"/>
+                android:textSize="14sp"/>
             <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/tv_contacts_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_contacts"
                 android:text="联系人"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textColor="#3C3F41"
                 />
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/ll_2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/ll_1"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="160dp"
+            android:layout_marginRight="20dp"
+            android:layout_centerVertical="true">
             <TextView
+                android:layout_marginTop="20dp"
                 android:id="@+id/tv_contactsway"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="联系方式"
-                android:textSize="18sp"/>
+                android:textSize="14sp"/>
             <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/tv_contactway_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_contactsway"
                 android:text="联系方式"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textColor="#3C3F41"
                 />
         </RelativeLayout>
@@ -94,55 +102,60 @@
         android:background="#999999"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"/>
+        />
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_height="0dp"
+        android:layout_weight="1.5">
 
         <RelativeLayout
             android:id="@+id/ll_3"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            android:layout_centerVertical="true">
             <TextView
+                android:layout_marginTop="20dp"
                 android:id="@+id/tv_telephone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="座机"
-                android:textSize="18sp"/>
+                android:textSize="14sp"/>
             <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/tv_telephone_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_telephone"
                 android:text="021-666-6666"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textColor="#3C3F41"
                 />
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/ll_4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/ll_3"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="160dp"
+            android:layout_marginRight="20dp"
+            android:layout_centerVertical="true">
             <TextView
+                android:layout_marginTop="20dp"
                 android:id="@+id/tv_qq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="QQ"
-                android:textSize="18sp"/>
+                android:textSize="14sp"/>
             <TextView
+                android:layout_marginTop="10dp"
                 android:id="@+id/tv_qq_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_qq"
                 android:text="1649369473"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textColor="#3C3F41"
                 />
         </RelativeLayout>
@@ -152,23 +165,33 @@
         android:layout_height="1dp"
         android:background="#999999"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="邮箱"
-        android:textSize="18sp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"/>
-    <TextView
-        android:id="@+id/tv_email_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="8888888@qq.com"
-        android:textSize="20sp"
-        android:textColor="#3C3F41"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginRight="20dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5">
+        <TextView
+            android:layout_marginTop="20dp"
+            android:id="@+id/tv_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="邮箱"
+            android:textSize="14sp"
+            android:layout_marginLeft="20dp"
+            android:gravity="center"/>
+        <TextView
+            android:layout_marginTop="10dp"
+            android:id="@+id/tv_email_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="8888888@qq.com"
+            android:textSize="14sp"
+            android:textColor="#3C3F41"
+            android:layout_marginLeft="20dp"
+            android:gravity="center"
+            android:layout_below="@id/tv_email"/>
+    </RelativeLayout>
+
 
     <View
         android:layout_width="match_parent"
@@ -186,8 +209,9 @@
             android:layout_weight="100"
             android:layout_height="wrap_content"
             android:text="取消"
-            android:textSize="24sp"
-            android:gravity="center"/>
+            android:textSize="15sp"
+            android:gravity="center"
+            android:layout_gravity="center"/>
         <View
             android:layout_width="1dp"
             android:layout_height="40dp"
@@ -198,8 +222,9 @@
             android:layout_weight="100"
             android:layout_height="wrap_content"
             android:text="确定"
-            android:textSize="24sp"
+            android:textSize="16sp"
             android:textColor="@color/app_button_blue"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
