--- a/app/src/main/res/layout/activity_editorderdetail.xml
+++ b/app/src/main/res/layout/activity_editorderdetail.xml
@@ -79,6 +79,7 @@
 
 
          <TextView
+             android:id="@+id/tv_deseription_name"
              android:layout_marginTop="10dp"
              android:text="苯乙烯"
              android:layout_below="@+id/tv_title_name"
@@ -87,6 +88,7 @@
 
 
          <TextView
+             android:id="@+id/tv_deseription_num"
              android:layout_marginTop="10dp"
              android:layout_alignParentRight="true"
              android:text="5000吨"
@@ -137,6 +139,7 @@
                     style="@style/tv_editdetail_title"/>
 
                 <com.guoyie.www.delivery.easy.widget.FocusEditText
+                    android:id="@+id/et_inputorder_num"
                     android:background="@null"
                     android:text="2018-12-2"
                     style="@style/tv_editdetail_cotent"/>
@@ -200,6 +203,7 @@
                     style="@style/tv_editdetail_title"/>
 
                 <com.guoyie.www.delivery.easy.widget.FocusEditText
+                    android:id="@+id/et_input_num"
                     android:background="@null"
                     android:text="2018-12-2"
                     style="@style/tv_editdetail_cotent"/>
@@ -220,6 +224,7 @@
                     style="@style/tv_editdetail_title"/>
 
                 <com.guoyie.www.delivery.easy.widget.FocusEditText
+                    android:id="@+id/et_car_num"
                     android:background="@null"
                     android:text="2018-12-2"
                     style="@style/tv_editdetail_cotent"/>
@@ -238,6 +243,7 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                 <com.guoyie.www.delivery.easy.widget.FocusEditText
+                    android:id="@+id/et_remark"
                     android:textColor="#999999"
                     android:textSize="14sp"
                     android:background="@null"
@@ -253,6 +259,7 @@
             </ScrollView>
 
             <TextView
+                android:id="@+id/tv_commit"
                 android:padding="10dp"
                 android:gravity="center"
                 android:text="提交"
