--- a/app/src/main/res/layout/activity_seachruslt.xml
+++ b/app/src/main/res/layout/activity_seachruslt.xml
@@ -4,6 +4,7 @@
    >
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -12,6 +13,11 @@
             layout="@layout/public_title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+
+        <com.guoyie.www.delivery.easy.widget.recyclerview.NRecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 
 
