--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -180,26 +180,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-
-
-
-        <cn.bingoogolapple.photopicker.widget.BGASortableNinePhotoLayout
-            android:id="@+id/snpl_moment_add_photos"
-            style="@style/WrapWrap"
-            android:layout_margin="10dp"
-            app:bga_snpl_deleteDrawable="@mipmap/bga_pp_ic_delete"
-            app:bga_snpl_deleteDrawableOverlapQuarter="false"
-            app:bga_snpl_editable="true"
-            app:bga_snpl_itemCornerRadius="0dp"
-            app:bga_snpl_itemSpanCount="3"
-            app:bga_snpl_itemWhiteSpacing="4dp"
-            app:bga_snpl_itemWidth="0dp"
-            app:bga_snpl_maxItemCount="90"
-            app:bga_snpl_otherWhiteSpacing="100dp"
-            app:bga_snpl_placeholderDrawable="@mipmap/bga_pp_ic_holder_light"
-            app:bga_snpl_plusDrawable="@mipmap/bga_pp_ic_plus"
-            app:bga_snpl_plusEnable="true"
-            app:bga_snpl_sortable="true" />
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
+                        android:overScrollMode="never" />
 
         </LinearLayout>
 
