--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,4 +59,6 @@
     <color name="gray">#C0C0C0</color>
     <color name="filter_normal">#111111</color>
     <color name="filter_selected">#497AF8</color>
+
+    <color name="color_f6">#f6f6f6</color>
 </resources>
